# BtS-2025-Writeups

./: .gitignore  README.md
crypto/Neo_Diffie_Hellman/challenge/: flag
crypto/Neo_Diffie_Hellman/writeup/: README.md  healthcheck.sage
crypto/better_aes/challenge/: Dockerfile  flag
crypto/better_aes/writeup/: README.md  healthcheck.py
crypto/roulette/challenge/: Dockerfile  flag
crypto/roulette/writeup/: README.md  healthcheck.py
crypto/talk/challenge/: .gitignore  Makefile  dhgen.py  flag
crypto/talk/writeup/: Makefile  README.md  solve.py  tshark.sh
forensics/Chiroptera_Timida/challenge/: flag
forensics/Chiroptera_Timida/writeup/: README.md
forensics/Sus_data/challenge/: flag
forensics/Sus_data/writeup/: README.md
forensics/copypasta/challenge/: flag
forensics/copypasta/writeup/: README.md  data.py  solve.py
forensics/monkey-paint/challenge/: flag
forensics/monkey-paint/writeup/: README.md  dissector.lua  extracted.csv
forensics/monkey-see/challenge/: flag
forensics/monkey-see/writeup/: README.md  dissector.lua
misc/Based/challenge/: flag
misc/Based/writeup/: README.md
misc/flag_encryption_as_a_service/challenge/: Dockerfile  flag  flag_encryption_as_a_service
misc/flag_encryption_as_a_service/writeup/flag_encryption_client/: Cargo.toml
misc/flag_encryption_as_a_service/writeup/flag_encryption_client/src/: main.rs
misc/sanity-check/challenge/app/: pyproject.toml  tailwind.config.js
misc/sanity-check/challenge/app/app/: .env  app.py
misc/sanity-check/challenge/app/app/templates/: index.html
misc/serial/challenge/: flag
(+107 files in other folders)
